# abstract-classifier

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
arxiv_article_classifier/: utils.py
arxiv_article_classifier/data/: load.py  make_interim_data.py  make_processed_data_bow.py  make_processed_data_distilbert.py  make_processed_data_tfidf.py  make_processed_data_utils.py  prepare_data.py  scrape_arxiv.py
arxiv_article_classifier/model/: __init__.py  baseline.py  distilbertmodel.py
notebooks/: 00-Readme_and_Report.ipynb  01-data-exploration.ipynb  01-label-exploration.ipynb  02-feature-exploration.ipynb  03-baseline-model.ipynb  04-tfidf-model.ipynb  05-DistillBert.ipynb
tests/: test_arxiv_article_classifier.py  test_data.py
