###########
# 📜 Poetry
###########
[tool.poetry]
name = "arxiv_article_classifier"
version = "0.1.0"
description = "Classifying arXiv articles"
authors = ["Jessica Walkenhorst <<walkenho@users.noreply.github.com>>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.10.1"
jupyterlab  = "^4.0.2"

pandas = "^2.0.2"
plotly = "^5.15.0"


# Everything below here is alphabetically sorted
scikit-multilearn = "^0.2.0"
scikit-learn = "^1.3.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
arxiv = "^1.4.8"
tqdm = "^4.65.0"
pylint = "^2.17.5"
spacy = "^3.6.1"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
bandit = "^1.7.5"
black = "^23.3.0"
flake8 = "5.0.4"
flake8-bugbear = "^23.3.12"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.4.0"
flake8-mutable = "^1.2.0"
flake8-no-pep420 = "^2.4.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.20.0"
isort = "^5.12.0"
jupyter-black = "^0.3.4"
pip-audit = "^2.5.5"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["arxiv_article_classifier"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
add_imports = "from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 100
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
# good-names = []
# disable = []
logging-format-style = "new"
